tests/machine/x/cpp/join_multi.error
/workspace/mochi/tests/machine/x/cpp/join_multi.cpp:19:12: error: ‘c’ was not declared in this scope
   19 |   decltype(c.name) name;
      |            ^
/workspace/mochi/tests/machine/x/cpp/join_multi.cpp:19:12: error: ‘c’ was not declared in this scope
/workspace/mochi/tests/machine/x/cpp/join_multi.cpp:20:12: error: ‘i’ was not declared in this scope
   20 |   decltype(i.sku) sku;
      |            ^
/workspace/mochi/tests/machine/x/cpp/join_multi.cpp:20:12: error: ‘i’ was not declared in this scope
/workspace/mochi/tests/machine/x/cpp/join_multi.cpp: In lambda function:
/workspace/mochi/tests/machine/x/cpp/join_multi.cpp:37:38: error: cannot convert ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} to ‘int’ in initialization
   37 |           __items.push_back(Result{c.name, i.sku});
      |                                    ~~^~~~
      |                                      |
      |                                      std::string {aka std::__cxx11::basic_string<char>}
