tests/machine/x/cpp/join_multi.cpp
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <iostream>
#include <string>
#include <vector>

struct Customer {
  int id;
  decltype(std::string("Alice")) name;
};
struct Order {
  int id;
  int customerId;
};
struct Item {
  int orderId;
  decltype(std::string("a")) sku;
};
struct Result {
  decltype(c.name) name;
  decltype(i.sku) sku;
};
int main() {
  std::vector<Customer> customers = {Customer{1, std::string("Alice")},
                                     Customer{2, std::string("Bob")}};
  std::vector<Order> orders = {Order{100, 1}, Order{101, 2}};
  std::vector<Item> items = {Item{100, std::string("a")},
                             Item{101, std::string("b")}};
  std::vector<Result> result = ([&]() {
    std::vector<Result> __items;
    for (auto o : orders) {
      for (auto c : customers) {
        if (!((o.customerId == c.id)))
          continue;
        for (auto i : items) {
          if (!((o.id == i.orderId)))
            continue;
          __items.push_back(Result{c.name, i.sku});
        }
      }
    }
    return __items;
  })();
  std::cout << std::string("--- Multi Join ---") << std::endl;
  for (auto r : result) {
    {
      std::cout << r.name;
      std::cout << ' ';
      std::cout << std::string("bought item");
      std::cout << ' ';
      std::cout << r.sku;
      std::cout << std::endl;
    }
  }
  return 0;
}
